# docs/apigen/V1/followings/following_responses.rb
@@ -4,7 +4,15 @@ class AddFollowingJsonResponse < Apigen::Migration
       type :object do
         id :string?
         follower :person_response
-        following :person_response
+        followed :person_response?
+      end
+    end
+
+    add_model :followed_response do
+      type :object do
+        id :string?
+        follower :person_response?
+        followed :person_response
       end
     end
   end
