# docs/specs/Swagger-V1.yaml
@@ -5729,6 +5729,17 @@ definitions:
       deleted:
         type: boolean
     required: []
+  followed_response:
+    type: object
+    properties:
+      id:
+        type: string
+      follower:
+        "$ref": "#/definitions/person_response"
+      followed:
+        "$ref": "#/definitions/person_response"
+    required:
+    - followed
   following_response:
     type: object
     properties:
@@ -5736,11 +5747,10 @@ definitions:
         type: string
       follower:
         "$ref": "#/definitions/person_response"
-      following:
+      followed:
         "$ref": "#/definitions/person_response"
     required:
     - follower
-    - following
   level_response:
     type: object
     properties:
@@ -5859,14 +5869,11 @@ definitions:
         type: string
       body:
         type: string
-      hidden:
-        type: boolean
-      created_time:
+      create_time:
         type: string
         format: date-time
       status:
-        type: integer
-        format: int32
+        type: string
       picture_url:
         type: string
       audio_url:
@@ -5884,26 +5891,19 @@ definitions:
     required:
     - id
     - body
-    - hidden
-    - created_time
-    - status
+    - create_time
     - person
   pending_badge_response:
     type: object
     properties:
-      pending_badge:
-        type: object
-        properties:
-          badge_action_count:
-            type: integer
-            format: int32
-          badge:
-            "$ref": "#/definitions/badge_response"
-        required:
-        - badge_action_count
-        - badge
+      badge_action_count:
+        type: integer
+        format: int32
+      badge:
+        "$ref": "#/definitions/badge_response"
     required:
-    - pending_badge
+    - badge_action_count
+    - badge
   person_private_response:
     type: object
     properties:
